@@ -4,6 +4,9 @@
 	* TODO file added
 	* somes improvements in the style of the code and the indentation 
 	  of *.xul
+	* FileGPG_GPG.cleanTmpPath(), FileGPG_GPG.getTmpPath() and 
+	  FileGPG_GPG.getTmpFile() moved to misc.js. The names are
+	  now removeFile(), getTmpDir() and getTmpFile().
 
 2007-03-04  Maximilien Cuony
 	* Some modification for errors of improvements of code's style
